# opensource

stt-api/: .gitignore  Dockerfile  README.md  audio_enhance.py  docker-compose.yml  eval_finetuned.py  evaluate.py  final_eval.py  finetune_whisper.py  full_optimize.py  medical_stt.py  optimize_cer.py  optimized_eval.py  pyproject.toml  restart.sh  retranscribe_all.py  run-docker.sh  run_full_eval.py  test_benchmark.py  test_comparison.py  test_cond_false.py  test_correction.py  test_full_benchmark.py  test_gpt_speaker.py  test_hybrid_speaker.py  test_korean_model.py  test_seastar105.py  test_speaker_correction.py  test_threshold_analysis.py  test_type2.py  type2_deep.py  type8_ai_run_result.json  wer_evaluation.py
stt-api/.claude/: launch.json
stt-api/app/: config.py  evaluation_router.py  executors.py  main.py  transcribe_slots.py  viewer_router.py
stt-api/app/data/: medical_dict.json
stt-api/app/medterm/: __init__.py  auto_detector.py  engine.py  gpt_corrector.py  learning.py  migration.py  models.py  phonetic.py  prompt_builder.py  reference_db.py  router.py  speaker_corrector.py  specialty_detector.py  store.py
stt-api/app/services/: audio.py  audio_preprocessor.py  clova_note.py  (+12 more)
stt-api/data/: baseline_v2.0.json  final_eval_results.json  full_eval_results.json  full_optimize_results.json  jangmin_result_no_prompt.json  korean_model_eval_baseline.json  korean_model_eval_with_prompt.json  kostom_reference.json  medical_dict (뭉찌의 충돌된 사본 2026-03-23).json  medical_dict.json  model_comparison.json  model_comparison_final.json  pending_reviews.json  round1_v2.1.json  seastar105_eval_no_prompt.json  seastar105_eval_with_prompt.json  seastar105_result_no_prompt.json  seastar105_result_with_prompt.json  v2.0_retranscribed.json  worst_type_optimization.json
stt-api/static/: dashboard.html  viewer.html
(+31 files in other folders)
