[project]
name = "stt-api"
version = "0.1.0"
description = "Standalone Speech-to-Text API (Faster-Whisper 오픈소스)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydub>=0.25.0",
    # 4.x는 torchcodec 필수 → torchaudio 2.11 조합에서 AudioDecoder NameError 등 빈번
    # speaker-diarization-3.1 모델은 3.x 계열로 충분
    "pyannote.audio>=3.1.0,<4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "faster-whisper>=1.0.0",
    "python-multipart>=0.0.9",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
