[project]
name = "stt-api"
version = "0.1.0"
description = "Standalone Speech-to-Text API (Faster-Whisper 오픈소스)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydub>=0.25.0",
    # 화자분리 안정성 고정 세트:
    # - pyannote 3.x (speaker-diarization-3.1)
    # - torch/torchaudio 2.8.x (2.11+ 에서 AudioMetaData/AudioDecoder 이슈 방지)
    "pyannote.audio>=3.1.0,<4.0.0",
    "torch>=2.8.0,<2.9.0",
    "torchaudio>=2.8.0,<2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "faster-whisper>=1.0.0",
    "python-multipart>=0.0.9",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
